# EK-LM4F120XL

./: README.md  env.sh
SW-EK-LM4F120XL-9453/: makedefs  makedefs-gcc  version
SW-EK-LM4F120XL-9453.dev/boards/ek-lm4f120xl-new/new_freertos/: Makefile  makedefs
SW-EK-LM4F120XL-9453.dev/boards/ek-lm4f120xl-new/new_freertos/src/: main.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/blinky/: CMakeLists.txt  Makefile  blinky.c  main.c  main.ld
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/blinky/gcc/: blinky.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/blinky_freertos/: Makefile  blinky.c  makedefs  startup_gcc.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/bootstrap/: main.axf  main.c  main.list
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/can/: CMakeLists.txt  can.ld  simple_rx.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/drivers/: retargetserial.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/fulltest/: CMakeLists.txt  Makefile  fulltest.c  gdbinit  main.c  retargetserial.h
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/i2ctest/: Makefile  blinky.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/i2ctest/gcc/: blinky.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/lcdtest/: Makefile  lcdtest.c  retargetserial.c  st7789.c  st7789.h  st7789v.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/lcdtest/gcc/: lcdtest.axf  lcdtest.lst
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/led_matrix/: CMakeLists.txt  main.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/led_matrix/gcc/: main.axf  main.lst
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/modify_startup/: Makefile  startup_gcc.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/new_freertos/: .map  CMakeLists.txt  Makefile  makedefs
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/new_freertos/src/: main.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/printf/: CMakeLists.txt  Makefile  printf.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/printf/gcc/: printf.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/project0/gcc/: project1.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/project1/: project1.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/ps2test/: fulltest.c  retargetserial.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/ps2test/gcc/: fulltest.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/st7789/: Makefile  i2c_wrapper.c  i2c_wrapper.h  it7259_wrapper.c  it7259_wrapper.h  lcdtest.c  spi_wrapper.c  spi_wrapper.h  st7789.c  st7789.h  st7789_wrapper.c  st7789_wrapper.h  st7789v.h  startup_gcc.c  uart_wrapper.c  uart_wrapper.h
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/tfcard/: Makefile  main.ld
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/tfcard/src/: main.c  sd_card.c  startup_gcc.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_echo/: Makefile  uart_echo.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_echo/gcc/: uart_echo.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_print/: CMakeLists.txt  Makefile  uart_print.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_print1/: CMakeLists.txt  Makefile  lm4f120h5qr.svd  uart_print.c
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_print1/gcc/: uart_print.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/uart_print1/gccerror/: uart_print.axf
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/usb_dev_bulk/: CMakeLists.txt  Makefile  usb_dev_bulk.c  usb_dev_bulk.ld
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/usb_dev_bulk.new/: usb_dev_bulk.c  usb_dev_bulk.ld
SW-EK-LM4F120XL-9453/boards/ek-lm4f120xl-new/usb_dev_bulk/usb_bulk_host/: usb_bulk_example
SW-EK-LM4F120XL-9453/boards/freertos/blinky/: CMakeLists.txt  Makefile  Makefile.old  startup_gcc.c
SW-EK-LM4F120XL-9453/boards/freertos/blinky/gcc/: build.map  main.axf  main.lst
SW-EK-LM4F120XL-9453/boards/freertos/debug/: CMakeLists.txt
SW-EK-LM4F120XL-9453/boards/freertos/printf/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/freertos/uart_print/: CMakeLists.txt  Makefile  main.ld  makedefs
SW-EK-LM4F120XL-9453/boards/freertos/uart_print/src/: main.c  startup_gcc.c
SW-EK-LM4F120XL-9453/boards/tinyusb/audio_4_channel_mic/: Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/audio_test_multi_rate/: CMakeLists.txt
SW-EK-LM4F120XL-9453/boards/tinyusb/cdc_msc/: .map  CMakeLists.txt  Makefile  makedefs
SW-EK-LM4F120XL-9453/boards/tinyusb/cdc_msc/inc/: board.h  tusb_config.h
SW-EK-LM4F120XL-9453/boards/tinyusb/cdc_msc/src/: family.c  main.c  msc_disk.c
SW-EK-LM4F120XL-9453/boards/tinyusb/cdc_msc_freertos/: CMakeLists.txt  Makefile  main.ld  makedefs
SW-EK-LM4F120XL-9453/boards/tinyusb/cdc_msc_freertos_1/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/daplink/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/dynamic_configuration/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/hid_composite_freertos/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/msc_dual_lun/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/net_lwip_webserver/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/usbtmc/: CMakeLists.txt  Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/video_capture/: Makefile
SW-EK-LM4F120XL-9453/boards/tinyusb/webusb_serial/: Makefile
SW-EK-LM4F120XL-9453/toolchain/: arm-gcc.cmake  lm4f120-base-.cmake  lm4f120-base.cmake
SW-EK-LM4F120XL-9453/tools/usb_bulk_example/: CMakeLists.txt  Makefile  usb_bulk_example.c  usb_dev_bulk.c
SW-EK-LM4F120XL-9453/usblib/: CMakeLists.txt
platformio_proj/arduino-blink/: platformio.ini
platformio_proj/libopencm3-usb-cdcacm/: platformio.ini
platformio_proj/native-blink/: platformio.ini
platformio_proj/native/blink/: platformio.ini
platformio_proj/native/blink/src/: main.c  startup_gcc.c
platformio_proj/native/printf/src/: printf.c
platformio_proj/opencm3/libopencm3-uart-echo-interrupt/: platformio.ini
platformio_proj/test/printf/: platformio.ini
platformio_proj/test/printf/src/: printf.c
platformio_proj/test/test/: platformio.ini
platformio_proj/test/test/src/: main.c
usb_host/usb_bulk_host1/: usb_bulk_example.c
(+54 files in other folders)
